# server

./: .coveragerc  .editorconfig  .gitignore  .gitlab-ci.yml  LICENSE  Procfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: cd-production.yml  cd-staging.yml  cd.yml  ci-and-cd.yml  ci-cd.yml  ci.yml  deploy.yaml  main.yaml  pr.yml  production.yml  staging.yml
.gitlab/ci/: build.gitlab-ci.yml  deploy.gitlab-ci.yml  quality.gitlab-ci.yml  templates.gitlab-ci.yml  test.gitlab-ci.yml  unit-tests.gitlab-ci.yml
scripts/: db-docker-container.sh  quality.sh  test.sh
server/: __init__.py  env.py
server/db/: __init__.py  entities.py
server/db/migrations/: env.py
server/db/migrations/versions/: 001_initial_schema.py  001_initial_squema.py  002_add_application_table.py  003_application_seed.py  004_added_uuid_to_products_and_orders.py  005_added_created_at_and_updated_at_to_.py
server/db/repo/: apps.py  orders.py  products.py
server/models/: oauth2.py  schemas.py  security.py
server/routes/: auth.py  heartbeat.py  orders.py  products.py
test/unit/: factories.py  fixtures.py  test_init.py
test/unit/db/: test_db.py  test_entities.py
test/unit/db/repo/: test_apps.py  test_orders.py  test_products.py
test/unit/models/: test_oauth2.py
test/unit/routes/: test_auth.py  test_heartbeat.py  test_orders.py  test_products.py
