[tool.poetry]
name = "server"
version = "0.1.0"
description = "The Micebot core application."
authors = ["MiceBot Collaborators."]
license = "MIT"
repository = "https://github.com/micebot/server.git"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.58.0"
uvicorn = "^0.11.5"
sqlalchemy = "^1.3.18"
alembic = "^1.4.2"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
coverage = "^5.1"
ipdb = "^0.13.3"
faker = "^4.1.1"
requests = "^2.24.0"
factory-boy = "^2.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
